# cpp-nostr

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  meson.build  vcpkg-configuration.json  vcpkg.json
.github/workflows/: meson.yml  vcpkg.yml
my-ports/cpp-yyjson/: portfile.cmake  vcpkg.json
my-ports/libbech32/: portfile.cmake  vcpkg.json
my-ports/libhv/: portfile.cmake  vcpkg.json
src/: bench.cpp  main.cpp  nip19.hpp  nostr_event.hpp  nostr_event_interface.hpp  nostr_event_sign_interface.hpp  nostr_event_sign_yyjson.hpp  nostr_event_yyjson.hpp  nostr_relay.hpp  nostr_relay_interface.hpp  nostr_relay_iterface.hpp  nostr_relay_libhv.hpp  nostr_relay_simple.hpp  nostr_relay_utils.hpp  nostr_subscription.hpp  random.h  utils.hpp
subprojects/: cpp-yyjson.wrap  fmt.wrap  libbech32.wrap  libhv.wrap  nameof.wrap  rx-nostr-cpp.wrap  secp256k1.wrap  yyjson.wrap
subprojects/packagefiles/rx-nostr/: meson.build
subprojects/packagefiles/rx-nostr/src/: nostr_event.hpp  rx_nostr.hpp  rx_nostr_interface.hpp  rx_nostr_libhv.hpp
subprojects/packagefiles/secp256k1/include/: hash.h
subprojects/packagefiles/secp256k1/src/: hash.h
